2009-09-23 Frank Kober <goemusic@yahoo.fr>
	* MIDI LFO added as new feature. GUI-wise LFOs coexist with Arps in 
	tabwidget. They are handeled in parallel through arpdata.cpp and are
	using the same queue as the arps. Each LFO outputs MIDI controller 
	data in adjustable resolution, waveform, amplitude, table length.  
	* midilfo.*, lfowidget.*, lfoadd.xpm: added
	* arprename.xpm, arpremove.xpm: changed since they are used for arps
	and LFOs.
	* arpdata.*: add midiLfoList in parallel to midiArpList
	* seqdriver.* : LFO data requesting and queueing added
	* mainwindow.* : LFO handling added, load/save routines adapted
	* TODO *: 
	Widgets in the tabwidget are currently recognized by their name
	to distinguish between LFO and Arp. A better solution would be nice.
	LFO Amp offset slider has no function yet
	LFO mute has no function yet
	LFO GUI needs improvement
	implement Guido's file change monitoring/Load/Save/SaveAs

2009-09-22 Guido Scholz <guido.scholz@bayernline.de>
	* main.cpp: Command line help streamlined.

2009-09-20 Frank Kober <goemusic@yahoo.fr>
	* arpscreen.cpp: more optimizations avoiding double precision
	calculations
	* arpwidget.cpp: LineEdit used replacing PlainTextEdit, pattern edit
	toolbuttons disabled instead of hidden

2009-09-19 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: Layout improved, using more QDockWidgets
	* arpwidget.cpp: QGridLayout used where appropriate
	* slider.*: tickStep parameter added, ticks added
	
2009-09-18 Frank Kober <goemusic@yahoo.fr>
	* arpwidget.cpp, midiarp.cpp: don't pass arpScreen to midiarp, 
	maximum height of arpScreen increased, groove values passed
	to arpscreen (not handled yet), queueTempo awareness added
	to midiarp for atk/rel display in seconds
	* arpscreen.cpp: math header removed, replace rectangles by lines to
	optimize, only one call to height() and width()
	* seqdriver.cpp: ALSA error number included in message, dependency 
	on C headers removed, midiarp gets queueTempo on every loop