@@ -368,59 +368,83 @@ d h durée de note augm/dim
         <translation>Forme</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="97"/>
+        <location filename="../lfowidget.cpp" line="106"/>
         <source>Waveform</source>
         <translation>Forme d&apos;onde</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="103"/>
+        <location filename="../lfowidget.cpp" line="112"/>
         <source>Waveform Basis</source>
         <translation>Base de la forme d&apos;onde</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="108"/>
+        <location filename="../lfowidget.cpp" line="117"/>
         <source>Frequency (cycles/beat)</source>
         <translation>Fréquence (cycles/beat)</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="116"/>
+        <location filename="../lfowidget.cpp" line="125"/>
         <source>Frequency: Number wave cycles produced every beat</source>
         <translation>Fréquence: Nomber de cycles d&apos;onde produits à chaque quart de temps</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="121"/>
+        <location filename="../lfowidget.cpp" line="130"/>
         <source>Resolution (events/beat)</source>
         <translation>Résolution (points/beat)</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="128"/>
+        <location filename="../lfowidget.cpp" line="137"/>
         <source>Resolution: Number of events produced every beat</source>
         <translation>Résolution: Nomber d&apos;évênements produits à chaque quart de temps</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="133"/>
+        <location filename="../lfowidget.cpp" line="142"/>
         <source>Length (beats)</source>
         <translation>Longueur (beats)</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="140"/>
+        <location filename="../lfowidget.cpp" line="149"/>
         <source>Length of LFO wave in beats</source>
         <translation>Longueur de la forme d&apos;onde du LFO en quarts de temps</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="161"/>
         <source>Oscillator</source>
-        <translation>Oscillateur</translation>
+        <translation type="obsolete">Oscillateur</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="166"/>
+        <location filename="../lfowidget.cpp" line="154"/>
         <source>&amp;Amplitude</source>
         <translation></translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="170"/>
+        <location filename="../lfowidget.cpp" line="158"/>
         <source>&amp;Offset</source>
         <translation>&amp;Décalage</translation>
+    </message>
+    <message>
+        <location filename="../lfowidget.cpp" line="300"/>
+        <source>Sine</source>
+        <translation>Sinus</translation>
+    </message>
+    <message>
+        <location filename="../lfowidget.cpp" line="300"/>
+        <source>Saw up</source>
+        <translation>Scie montant</translation>
+    </message>
+    <message>
+        <location filename="../lfowidget.cpp" line="300"/>
+        <source>Triangle</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../lfowidget.cpp" line="301"/>
+        <source>Saw down</source>
+        <translation>Scie déscendant</translation>
+    </message>
+    <message>
+        <location filename="../lfowidget.cpp" line="301"/>
+        <source>Square</source>
+        <translation>Créneau</translation>
     </message>
 </context>
 <context>
